Fix: Role Align

--- a/qa-styles.css
+++ b/qa-styles.css
@@ -2882,7 +2882,7 @@ input.qa-form-tall-button.qa-form-tall-button-send:hover {
 .qa-who-marker-expert:before {
 	margin-right: .2rem;
 	content: url(images/junior-mod.png);
-	vertical-align: bottom;
+	vertical-align: -50%;
 }
 
 .qa-who-marker-editor {
@@ -2893,7 +2893,7 @@ input.qa-form-tall-button.qa-form-tall-button-send:hover {
 .qa-who-marker-editor:before {
 	margin-right: .2rem;
 	content: url(images/pleno-mod.png);
-	vertical-align: bottom;
+	vertical-align: -50%;
 }
 
 .qa-who-marker-moderator {
@@ -2904,7 +2904,7 @@ input.qa-form-tall-button.qa-form-tall-button-send:hover {
 .qa-who-marker-moderator:before {
 	margin-right: .2rem;
 	content: url(images/senior-mod.png);
-	vertical-align: bottom;
+	vertical-align: -50%;
 }
 
 .qa-who-marker-admin {
@@ -2915,7 +2915,7 @@ input.qa-form-tall-button.qa-form-tall-button-send:hover {
 .qa-who-marker-admin:before {
 	margin-right: .2rem;
 	content: url(images/admin.png);
-	vertical-align: bottom;
+	vertical-align: -50%;
 }
 
 .qa-avatar-marker {
